# pathnorm-pytorch

./: .gitignore  NOTICE.md  README.md  pathnorm.py  pyproject.toml  quickstart.ipynb  setup.py
repro/iclr24/: README.md  iclr24_repro.ipynb
repro/iclr24/results/: README.md
repro/iclr24/utils/: __init__.py  compute_margin.py  download_imagenet_from_hf.py  download_imagenet_from_hf.sh  evaluate_accuracy.py  helpers.py  imagenet_data.py  imagenet_dataset.py  log_and_checkpoint.py  parse_arguments.py  pathnorm_compat.py  plot_imp.py  plot_increasing_dataset.py  prepare_imagenet.sh  prepare_imagenet_data.py  pretrained_resnets.py  run_figure4_plot.sh  run_figure4_train.sh  run_figure5_plot.sh  run_figure5_train.sh  run_pretrained_resnets.sh  run_table2.sh  train_imagenet.py  verify_imagenet_data.py  workflow.py
repro/icml25/: README.md  icml25_repro.ipynb
repro/icml25/results/: README.md
repro/icml25/results/paper_release/: benchmark_summary.csv  dense_summary.csv  pruning_accuracy_body.csv  pruning_accuracy_full.csv  (+1 more)
repro/icml25/utils/: __init__.py  aggregate_results.py  benchmark.py  finetune_pruned.py  imagenet_data.py  imagenet_dataset.py  log_and_checkpoint.py  path_magnitude.py  pathnorm_transform.py  pipeline.py  plot_training_curves.py  prepare_pruned_checkpoint.py  publish_paper_release.sh  rescaling.py  results.py  run_accuracy_sweep.sh  run_campaign.sh  run_dense_train.sh  run_full_repro.sh  run_pruning_experiment.sh  run_runtime_benchmark.sh  scheduler.py  train_imagenet.py  training_utils.py  workflow.py
src/pathnorm/path_norm/: compute_path_norm.py
(+10 files in other folders)
